force-app/main/default/objects/nFORCE__Test_Object__c/nFORCE__Test_Object__c.object-meta.xml
<CustomObject>
    <description>The object is used for testing purposes only.</description>
    <label>Test Object</label>
    <nameField>
        <label>Test Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>