force-app/main/default/objects/nFORCE__Test_Object__c/fields/nFORCE__Account__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used for testing purposes only.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Test Objects</relationshipLabel>
    <relationshipName>Test_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>