force-app/main/default/objects/nFORCE__Test_Object__c/fields/nFORCE__Test_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Test_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in unit tests.</description>
    <inlineHelpText>Used in unit tests.</inlineHelpText>
    <label>Test Checkbox</label>
    <type>Checkbox</type>
</CustomField>