force-app/main/default/objects/nFORCE__Test_Object__c/fields/nFORCE__Test_Date__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Test_Date__c</fullName>
    <description>Used in unit tests.</description>
    <inlineHelpText>Used in unit tests.</inlineHelpText>
    <label>Test Date</label>
    <type>Date</type>
</CustomField>