force-app/main/default/objects/nFORCE__Test_Object__c/fields/nFORCE__Test_Picklist__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Test_Picklist__c</fullName>
    <description>Used in unit tests.</description>
    <inlineHelpText>Used in unit tests.</inlineHelpText>
    <label>Test Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>